@@ -1044,6 +1044,42 @@ name|KEY_MAX_IO_RETRIES
 init|=
 literal|"fs.azure.io.retry.max.retries"
 decl_stmt|;
+DECL|field|KEY_COPYBLOB_MIN_BACKOFF_INTERVAL
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|KEY_COPYBLOB_MIN_BACKOFF_INTERVAL
+init|=
+literal|"fs.azure.io.copyblob.retry.min.backoff.interval"
+decl_stmt|;
+DECL|field|KEY_COPYBLOB_MAX_BACKOFF_INTERVAL
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|KEY_COPYBLOB_MAX_BACKOFF_INTERVAL
+init|=
+literal|"fs.azure.io.copyblob.retry.max.backoff.interval"
+decl_stmt|;
+DECL|field|KEY_COPYBLOB_BACKOFF_INTERVAL
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|KEY_COPYBLOB_BACKOFF_INTERVAL
+init|=
+literal|"fs.azure.io.copyblob.retry.backoff.interval"
+decl_stmt|;
+DECL|field|KEY_COPYBLOB_MAX_IO_RETRIES
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|KEY_COPYBLOB_MAX_IO_RETRIES
+init|=
+literal|"fs.azure.io.copyblob.retry.max.retries"
+decl_stmt|;
 DECL|field|KEY_SELF_THROTTLE_ENABLE
 specifier|private
 specifier|static
@@ -1320,6 +1356,48 @@ specifier|static
 specifier|final
 name|int
 name|DEFAULT_MAX_RETRY_ATTEMPTS
+init|=
+literal|15
+decl_stmt|;
+DECL|field|DEFAULT_COPYBLOB_MIN_BACKOFF_INTERVAL
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_COPYBLOB_MIN_BACKOFF_INTERVAL
+init|=
+literal|3
+operator|*
+literal|1000
+decl_stmt|;
+DECL|field|DEFAULT_COPYBLOB_MAX_BACKOFF_INTERVAL
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_COPYBLOB_MAX_BACKOFF_INTERVAL
+init|=
+literal|90
+operator|*
+literal|1000
+decl_stmt|;
+DECL|field|DEFAULT_COPYBLOB_BACKOFF_INTERVAL
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_COPYBLOB_BACKOFF_INTERVAL
+init|=
+literal|30
+operator|*
+literal|1000
+decl_stmt|;
+DECL|field|DEFAULT_COPYBLOB_MAX_RETRY_ATTEMPTS
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_COPYBLOB_MAX_RETRY_ATTEMPTS
 init|=
 literal|15
 decl_stmt|;
@@ -8765,16 +8843,141 @@ decl_stmt|;
 comment|// Rename the source blob to the destination blob by copying it to
 comment|// the destination blob then deleting it.
 comment|//
+comment|// Copy blob operation in Azure storage is very costly. It will be highly
+comment|// likely throttled during Azure storage gc. Short term fix will be using
+comment|// a more intensive exponential retry policy when the cluster is getting
+comment|// throttled.
+try|try
+block|{
 name|dstBlob
 operator|.
 name|startCopyFromBlob
 argument_list|(
 name|srcUri
 argument_list|,
+literal|null
+argument_list|,
 name|getInstrumentedContext
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|StorageException
+name|se
+parameter_list|)
+block|{
+if|if
+condition|(
+name|se
+operator|.
+name|getErrorCode
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|StorageErrorCode
+operator|.
+name|SERVER_BUSY
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|int
+name|copyBlobMinBackoff
+init|=
+name|sessionConfiguration
+operator|.
+name|getInt
+argument_list|(
+name|KEY_COPYBLOB_MIN_BACKOFF_INTERVAL
+argument_list|,
+name|DEFAULT_COPYBLOB_MIN_BACKOFF_INTERVAL
+argument_list|)
+decl_stmt|;
+name|int
+name|copyBlobMaxBackoff
+init|=
+name|sessionConfiguration
+operator|.
+name|getInt
+argument_list|(
+name|KEY_COPYBLOB_MAX_BACKOFF_INTERVAL
+argument_list|,
+name|DEFAULT_COPYBLOB_MAX_BACKOFF_INTERVAL
+argument_list|)
+decl_stmt|;
+name|int
+name|copyBlobDeltaBackoff
+init|=
+name|sessionConfiguration
+operator|.
+name|getInt
+argument_list|(
+name|KEY_COPYBLOB_BACKOFF_INTERVAL
+argument_list|,
+name|DEFAULT_COPYBLOB_BACKOFF_INTERVAL
+argument_list|)
+decl_stmt|;
+name|int
+name|copyBlobMaxRetries
+init|=
+name|sessionConfiguration
+operator|.
+name|getInt
+argument_list|(
+name|KEY_COPYBLOB_MAX_IO_RETRIES
+argument_list|,
+name|DEFAULT_COPYBLOB_MAX_RETRY_ATTEMPTS
+argument_list|)
+decl_stmt|;
+name|BlobRequestOptions
+name|options
+init|=
+operator|new
+name|BlobRequestOptions
+argument_list|()
+decl_stmt|;
+name|options
+operator|.
+name|setRetryPolicyFactory
+argument_list|(
+operator|new
+name|RetryExponentialRetry
+argument_list|(
+name|copyBlobMinBackoff
+argument_list|,
+name|copyBlobDeltaBackoff
+argument_list|,
+name|copyBlobMaxBackoff
+argument_list|,
+name|copyBlobMaxRetries
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dstBlob
+operator|.
+name|startCopyFromBlob
+argument_list|(
+name|srcUri
+argument_list|,
+name|options
+argument_list|,
+name|getInstrumentedContext
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+name|se
+throw|;
+block|}
+block|}
 name|waitForCopyToComplete
 argument_list|(
 name|dstBlob
@@ -8793,7 +8996,22 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|StorageException
+name|e
+parameter_list|)
+block|{
+comment|// Re-throw exception as an Azure storage exception.
+throw|throw
+operator|new
+name|AzureException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|URISyntaxException
 name|e
 parameter_list|)
 block|{
